# lifegame

./: .gitignore  CMakeLists.txt  README.md
src/core/: CMakeLists.txt  universe.cpp  universe.h  universe_conv.cpp  universe_typecast.cpp
src/ui/: CMakeLists.txt  Main.qml  main.cpp  universedata.cpp  universedata.h
src/ui/qml/: CellGrid.qml  Main.qml  ZoomFlick.qml
src/ui/res/: default.txt  main.qrc
tests/: CMakeLists.txt  lifegame.cpp  universe_test.cpp  worlds.h
